--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -237,3 +237,13 @@ month = {05},
 pages = {},
 title = {Dampen the Stop-and-Go Traffic with Connected and Automated Vehicles- A Deep Reinforcement Learning Approach}
 }
+
+@article{DDPG,
+author = {Lillicrap, Timothy and Hunt, Jonathan and Pritzel, Alexander and Heess, Nicolas and Erez, Tom and Tassa, Yuval and Silver, David and Wierstra, Daan},
+year = {2015},
+month = {09},
+pages = {},
+title = {Continuous control with deep reinforcement learning},
+journal = {CoRR}
+}
+
